// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      strokeLinecap="square"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#EDEDED"
      strokeLinecap="square"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#EDEDED"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      strokeLinecap="square"
      strokeOpacity="0.2"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter many values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 336,12 L 384,12"
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 288,12 L 336,12"
      fill="none"
      stroke="#00873D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 240,12 L 288,12"
      fill="none"
      stroke="#3D138D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 192,12 L 240,12"
      fill="none"
      stroke="#00739D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 144,12 L 192,12"
      fill="none"
      stroke="#A2423D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 96,12 L 144,12"
      fill="none"
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 48,12 L 96,12"
      fill="none"
      stroke="#00873D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 48,12"
      fill="none"
      stroke="#3D138D"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter round 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  border-radius: 24px;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c2 {
  max-width: 100%;
  overflow: hidden;
}

.c2 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 12,12 L 372,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="round"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 12,12 L 84,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c2"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#F2F2F2"
      strokeLinecap="round"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 362.6982579371 134.8851618471"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="round"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 96 24"
    width={96}
  >
    <path
      d="M 0,12 L 96,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 19.2,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 192 24"
    width={192}
  >
    <path
      d="M 0,12 L 192,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 38.4,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 768 24"
    width={768}
  >
    <path
      d="M 0,12 L 768,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 153.6,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 1152 24"
    width={1152}
  >
    <path
      d="M 0,12 L 1152,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 230.4,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M 0,12 L 24,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 4.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={96}
    viewBox="0 0 96 96"
    width={96}
  >
    <circle
      cx={48}
      cy={48}
      fill="none"
      r={36}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 82.2380345866 36.8753882025 A 36.0000000000 36.0000000000 0 0 0 48.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={192}
    viewBox="0 0 192 192"
    width={192}
  >
    <circle
      cx={96}
      cy={96}
      fill="none"
      r={84}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 175.8887473688 70.0425724725 A 84.0000000000 84.0000000000 0 0 0 96.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={768}
    viewBox="0 0 768 768"
    width={768}
  >
    <circle
      cx={384}
      cy={384}
      fill="none"
      r={372}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 737.7930240618 269.0456780925 A 372.0000000000 372.0000000000 0 0 0 384.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={1152}
    viewBox="0 0 1152 1152"
    width={1152}
  >
    <circle
      cx={576}
      cy={576}
      fill="none"
      r={564}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 1112.3958751905 401.7144151725 A 564.0000000000 564.0000000000 0 0 0 576.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={55}
    viewBox="0 0 55 55"
    width={55}
  >
    <circle
      cx={27.5}
      cy={27.5}
      fill="none"
      r={15.5}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 42.2413760026 22.7102365872 A 15.5000000000 15.5000000000 0 0 0 27.5000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
</div>
`;

exports[`Meter thickness 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={6}
    preserveAspectRatio="none"
    viewBox="0 0 384 6"
    width={384}
  >
    <path
      d="M 0,3 L 384,3"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={6}
    />
    <path
      d="M 0,3 L 76.8,3"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={6}
    />
  </svg>
  <svg
    className="c1"
    height={12}
    preserveAspectRatio="none"
    viewBox="0 0 384 12"
    width={384}
  >
    <path
      d="M 0,6 L 384,6"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={12}
    />
    <path
      d="M 0,6 L 76.8,6"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={12}
    />
  </svg>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={48}
    preserveAspectRatio="none"
    viewBox="0 0 384 48"
    width={384}
  >
    <path
      d="M 0,24 L 384,24"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={48}
    />
    <path
      d="M 0,24 L 76.8,24"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={48}
    />
  </svg>
  <svg
    className="c1"
    height={96}
    preserveAspectRatio="none"
    viewBox="0 0 384 96"
    width={384}
  >
    <path
      d="M 0,48 L 384,48"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={96}
    />
    <path
      d="M 0,48 L 76.8,48"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={96}
    />
  </svg>
  <svg
    className="c1"
    height={55}
    preserveAspectRatio="none"
    viewBox="0 0 384 55"
    width={384}
  >
    <path
      d="M 0,27.5 L 384,27.5"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={55}
    />
    <path
      d="M 0,27.5 L 76.8,27.5"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={55}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={189}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={6}
    />
    <path
      d="M 371.7496815798 133.5957880631 A 189.0000000000 189.0000000000 0 0 0 192.0000000000 3.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={6}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={186}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={12}
    />
    <path
      d="M 368.8965120309 134.5228390463 A 186.0000000000 186.0000000000 0 0 0 192.0000000000 6.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={12}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={168}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={48}
    />
    <path
      d="M 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={48}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={144}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={96}
    />
    <path
      d="M 328.9521383465 147.5015528100 A 144.0000000000 144.0000000000 0 0 0 192.0000000000 48.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={96}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={164.5}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={55}
    />
    <path
      d="M 348.4487969306 141.1667044253 A 164.5000000000 164.5000000000 0 0 0 192.0000000000 27.5000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={55}
    />
  </svg>
</div>
`;

exports[`Meter type 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={24}
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width={384}
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
  <svg
    className="c1"
    height={384}
    viewBox="0 0 384 384"
    width={384}
  >
    <circle
      cx={192}
      cy={192}
      fill="none"
      r={180}
      stroke="#F2F2F2"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={24}
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#6FFFB0"
      strokeLinecap="butt"
      strokeWidth={24}
    />
  </svg>
</div>
`;
